--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^5.0.1",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
