--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.16.0",
+    "sweetalert": "^2.1.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
